remove some client warnings